@@ -26,7 +26,7 @@ no_index:
 provides:
   Alt::Devel::Cover::Report::Coveralls::usingfurl:
     file: lib/Alt/Devel/Cover/Report/Coveralls/usingfurl.pm
-    version: v0.1.2
+    version: v0.1.4
 requires:
   Devel::Cover: '1.02'
   Furl: '0'
@@ -38,4 +38,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Alt-Devel-Cover-Report-Coveralls-usingfurl
   homepage: https://metacpan.org/author/PJFL
   license: http://dev.perl.org/licenses/
-version: 0.1.2
+version: 0.1.4
